Sun Nov 14 20:45:45 CET 2010
	Adding API call to generate HTTP footers in response. -CG

Sat Oct 16 12:38:43 CEST 2010
	Releasing libmicrohttpd 0.9.2. -CG

Tue Oct 12 15:41:51 CEST 2010
	Fixed issue with data received via SSL being delayed in the
	GNUtls buffer if sender stopped transmitting (but did not close
	the connection) and MHD buffer size was smaller than last fragment,
	resulting in possibly significantly delayed processing of
	incoming data.  -CG

Wed Sep 22 09:48:59 CEST 2010
	Changed port argument from 'unsigned short' to 'uint16_t'.
	Removed dead code when compiling with messages enabled.
	Minimal unrelated code cleanup. -CG

Tue Sep 21 15:12:41 CEST 2010
	Use "size_t" for buffer size instead of "int". -CG

Sat Sep 18 07:16:30 CEST 2010
	Adding support for SHOUTcast. -CG

Wed Sep 15 09:33:46 CEST 2010
	Fixed double-free. -CG/ES

Fri Sep 10 14:47:11 CEST 2010
	Releasing libmicrohttpd 0.9.1. -CG

Fri Sep 10 14:29:37 CEST 2010
	Adding proper nonce counter checking for digest authentication. -CG/AA

Sat Sep  4 21:55:52 CEST 2010
	Digest authentication now seems to be working. -CG/AA

Wed Sep  1 13:59:16 CEST 2010
	Added ability to specify external unescape function.
	"microhttpd.h" now includes the right headers for GNU/Linux
	systems unless MHD_PLATFORM_H is defined (in which case it
	is assumed that the right headers were already determined by
	some configure-like process). -CG

Tue Aug 31 15:39:25 CEST 2010
	Fixed bug with missing call to response cleanup in case of
	connection handling error (for example, after getting a SIGPIPE). -CG

Tue Aug 24 11:39:25 CEST 2010
	Fixed bug in handling EAGAIN from GnuTLS (caused
	needlessly dropped SSL connections). -CG

Sun Aug 22 16:49:13 CEST 2010
	Initial draft for digest authentication. -AA

Thu Aug 19 14:15:01 CEST 2010
	Changed code to enable error messages and HTTPS by default;
	added option to disable post processor API (use
	breaks binary compatibility, should only be done